manifests/app_bets.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bets
  labels:
    app: bets
    aadpodidbinding: dapr-bet-cluster-mid
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bets
  template:
    metadata:
      labels:
        app: bets
        aadpodidbinding: dapr-bet-cluster-mid
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "bets"
        dapr.io/port: "8004"
        dapr.io/log-level: "debug"
        dapr.io/config: "tracing"
        dapr.io/profiling: "true"
    spec:
      containers:
      - name: bets
        image: daprbet891237.azurecr.io/bets:dev-0.1.0
        ports:
          - containerPort: 8004
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
