manifests/app_results.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: results
  labels:
    app: results
    aadpodidbinding: dapr-bet-cluster-mid
spec:
  replicas: 1
  selector:
    matchLabels:
      app: results
  template:
    metadata:
      labels:
        app: results
        aadpodidbinding: dapr-bet-cluster-mid
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "results"
        dapr.io/port: "8003"
        dapr.io/log-level: "debug"
        dapr.io/config: "tracing"
        dapr.io/profiling: "true"
    spec:
      dnsPolicy: ClusterFirst
      containers:
      - name: results
        image: daprbet891237.azurecr.io/results:dev-0.1.0
        ports:
          - containerPort: 8003
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
      #nodeSelector:
        #kubernetes.io/role: agent
        #beta.kubernetes.io/os: linux
        #type: virtual-kubelet
      #tolerations:
      #- key: virtual-kubelet.io/provider
        #operator: Exists
      #imagePullSecrets:
      #- name: registry-secret
