manifests/deploy.bets.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bets
  labels:
    app: bets
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bets
  template:
    metadata:
      labels:
        app: bets
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "bets"
        dapr.io/app-port: "8004"
        dapr.io/log-level: "debug"
        dapr.io/profiling: "true"
        dapr.io/enable-api-logging: "true"
    spec:
      containers:
        - name: bets
          image: <IMAGE_NAME>
          ports:
            - containerPort: 8004
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
