manifests/deploy.punters.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: punters
  labels:
    app: punters
    aadpodidbinding: dapr-bet-cluster-mid
spec:
  replicas: 1
  selector:
    matchLabels:
      app: punters
  template:
    metadata:
      labels:
        app: punters
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "punters"
        dapr.io/app-port: "8002"
        dapr.io/log-level: "debug"
        dapr.io/profiling: "true"
        dapr.io/enable-api-logging: "true"
    spec:
      containers:
        - name: punters
          image: <IMAGE_NAME>
          ports:
            - containerPort: 8002
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
